--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
 
     implementation "io.coil-kt:coil-compose:2.2.0"
 
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1"
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
